# techjam-salestok

./: README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
backend/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
backend/backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/crm/: admin.py  models.py  serializers.py  urls.py  views.py
backend/crm/migrations/: 0001_initial.py  0002_contact_recommended_language_deal_budget_and_more.py  0003_rename_last_name_contact_image_and_more.py  0004_rename_name_tasks_item_remove_contactnote_sales_id_and_more.py  0005_remove_callsummary_call_remove_callsummary_contact_and_more.py  0006_alter_deal_stage.py
backend/helpers/: calls.py  constants.py  converters.py  mixins.py  paths.py  serializers_field.py  speech_translate.py
backend/voicecall/: admin.py  apps.py  consumers.py  models.py  serializers.py  urls.py  views.py  ws_urls.py
backend/voicecall/migrations/: 0001_initial.py  0002_remove_callrecord_transript_callrecord_transcript_and_more.py  0003_remove_callsummary_call_remove_callsummary_contact_and_more.py
public/: index.html
public/logos/: Readme.md
src/: App.tsx  Header.tsx  authProvider.ts  index.tsx  types.ts
src/companies/: CompanyAvatar.tsx  CompanyCard.tsx  CompanyListFilter.tsx  GridList.tsx  index.ts
src/contacts/: Avatar.tsx  Call.tsx  ContactAside.tsx  ContactEdit.tsx  ContactList.tsx  ContactListFilter.tsx  ContactShow.tsx  TagsList.tsx  TagsListEdit.tsx  index.tsx
src/dashboard/: Dashboard.tsx  DealsChart.tsx  LatestNotes.tsx  (+1 more)
(+14 files in other folders)
